# tflocal-gcp

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.claude/skills/add-service-endpoint/: SKILL.md
.claude/skills/release/: SKILL.md
.cursor/rules/: project.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/rulesets/: branch-main.json  tag-release.json
.github/workflows/: ci.yml  dco.yml  release.yml
docs/adr/: 0001-language-python.md  0002-license-mit.md  0003-src-layout.md  0004-gcs-backend.md  0005-pypi-trusted-publishing.md  README.md
example/: README.md  main.tf
src/tflocal_gcp/: __init__.py  backend.py  cli.py  endpoints.py  hcl.py  overrides.py
tests/: test_backend.py  test_cli.py  test_e2e.py  test_endpoints.py  test_hcl.py  test_overrides.py
