[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tflocal-gcp"
version = "0.1.0"
description = "Thin Terraform CLI wrapper to run Terraform against localgcp (the local GCP emulator)."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Gajesh Bhat" }]
keywords = [
    "terraform",
    "localgcp",
    "gcp",
    "google-cloud",
    "emulator",
    "infrastructure-as-code",
    "iac",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]
dependencies = [
    "python-hcl2>=4.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
    "build>=1",
]

[project.scripts]
tflocal-gcp = "tflocal_gcp.cli:main"

[project.urls]
Homepage = "https://github.com/gajeshbhat/tflocal-gcp"
Repository = "https://github.com/gajeshbhat/tflocal-gcp"
Issues = "https://github.com/gajeshbhat/tflocal-gcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tflocal_gcp"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
